welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: Missing closing brace `}' assumed here
}
^ZigZag:3: error: expected class or object definition
def doTheSnakyThing() {
^ZigZag:7: error: Missing closing brace `}' assumed here
def pasDeSerpent(Bool:Boolean) {
^